updated controller and services

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Travel-And-Tour-Project</name>
+	<name>Travel-and-tour-project</name>
 	<comment></comment>
 	<projects>
 	</projects>
